Dispose Of FocusNode

--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 keyAlias=androiddebugkey
-storeFile=C:\\Users\\UgooStanleyIbe\\.android\\debug.keystore
+storeFile=%USERPROFILE%\\.android\\debug.keystore
 storePassword=android
 keyPassword=android
